--- a/my-website/index.html
+++ b/my-website/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="navbar">
-    <img src="logo.png" alt="LOGO HERE" />
+    <img src="logo"">BillyMovies</div>
     <div class="nav-links">
       <a href="index.html">Home</a>
       <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
