--- a/my-website/index.html
+++ b/my-website/index.html
@@ -19,7 +19,32 @@
 
 </head>
 
+  <style>
+  .logo {
+    font-size: 36px;
+    font-weight: 800;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #ffffff;
+    text-align: left;
+    padding: 10px 25px;
+    background: linear-gradient(90deg, #ff416c, #ff4b2b);
+    border-radius: 15px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.25);
+    display: inline-block;
+    letter-spacing: 1px;
+    text-shadow: 1px 1px 2px #00000050;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .logo:hover {
+    transform: scale(1.05);
+    background: linear-gradient(90deg, #ff4b2b, #ff416c);
+    color: #f1faee;
+  }
+</style>
+
 <body>
+  <h1 class="logo">BillyMovies</h1>
   <div class="navbar">
     <img src="logo"">BillyMovies</div>
     <div class="nav-links">
