--- a/my-website/index.html
+++ b/my-website/index.html
@@ -46,7 +46,7 @@
 <body>
   <div class="navbar">
     <div class="nav-links">
-      <a href="index.html">Home</a>
+      <a href="#" class="nav-home">Home</a>
       <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
     </div>
   </div>
